<resources>
    <string name="app_name">StopWatchApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="timer_label">00:00.000</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="reset_label">Reset</string>
    <string name="kill_msg">ぜってぇ殺す</string>
</resources>
