<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="64dp"
        android:textStyle="bold"
        android:id="@+id/timerLabel"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/timer_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="0dp">
        
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/start_label"
            android:id="@+id/startButton"
            android:onClick="startTimer"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/stop_label"
            android:id="@+id/stoptButton"
            android:onClick="stopTimer"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/reset_label"
            android:id="@+id/resetButton"
            android:onClick="resetTimer"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_gravity="center"
        android:textSize="36sp"
        android:text="@string/kill_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
